<resources>
    <string name="facebook_app_id">2008154826124733</string>
    <string name="fb_login_protocol_scheme">fb2008154826124733</string>
    <string name="app_name">Open Starter</string>
    <string name="password">Password</string>
    <string name="next">next</string>
    <string name="username">username</string>
    <string name="go">go</string>
    <string name="remaining_budget_mock" translatable="false">$1500.0</string>
    <string name="remaining_budget_badge" translatable="false">Remaining</string>
    <string name="ends_date_badge" translatable="false">Ends</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="follows_count_badge" translatable="false">FOLLOWS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="goal_value_badge" translatable="false">GOAL</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledges_sum_badge" translatable="false">PLEDGES</string>
    <string name="description_badge" translatable="false">DESCRIPTION</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="details_btn_text" translatable="false">DETAILS</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from_day_mock">01/10/2017</string>
    <string name="content_from_time_mock">17:00</string>
    <string name="content_to_day_mock">10/12/2017</string>
    <string name="content_to_time_mock">08:00</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="repeat_password">repeat password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">forgot your password</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="first_name">First name</string>
    <string name="last_name">last name</string>
    <string name="bio">bio (optional)</string>
    <string name="finish">finish</string>
    <string name="please_tell_us_more_about_you">please tell us more about you</string>
    <string name="welcome_to_open_starter">Welcome to open starter !</string>
    <string name="profil_picture">profil_picture</string>
    <string name="title_activity_project">ProjectActivity</string>
    <!--Project Activity Strings -->
    <string name="project_name_mock" translatable="false">Project #1</string>
    <string name="project_group_mock" translatable="false">Group #1</string>
    <string name="project_made_by_badge" translatable="false">Made By :</string>
    <string name="project_category_badge" translatable="false">CATEGORY</string>
    <string name="project_followers_badge" translatable="false">FOLLOWERS</string>
    <string name="project_category_mock" translatable="false">ART</string>
    <!--New Project Activity Strings -->
    <string-array name="create_project_steps_titles">
        <item>Name</item>
        <item>Category</item>
        <item>Short Description</item>
        <item>Description</item>
        <item>Start Date</item>
        <item>Finish Date</item>
        <item>Budget</item>
        <item>Collaboration Group</item>
    </string-array>
    <string name="create_project_form_hint_name">Project name (required)</string>
    <string name="error_name_min_characters">At least %1$d characters</string>
    <string name="error_name_max_characters">At most %1$d characters</string>
    <string name="error_start_date">Choose a start date</string>
    <string name="error_finish_date">Choose a valid finish date</string>
    <string name="error_budget">Insert a valid budget</string>
    <string name="create_project_form_hint_short_description">Project short description (required)</string>
    <string name="create_project_form_hint_description">Project description (required)</string>
    <string name="project_start_date_hint" translatable="false">Click to chose a Date</string>
    <string name="project_start_time_default" translatable="false">00:00</string>
    <string name="create_project_form_hint_budget">The budget needed to finish your project (required)</string>
    <string name="create_project_sending_message">Creating your project … please wait</string>
    <!-- -->
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date">date</string>
    <string name="edit_profil">edit profil</string>
    <string name="profil_update">Profil update</string>
    <string name="what_would_you_like_to_change">what would you like to change ?</string>
    <string name="groups">Groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
