<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <!-- LEFT TITLE PART -->
    <RelativeLayout
        android:id="@+id/title_side_bar"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="3"
        android:background="@color/bgTitleLeft"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/title_remaining_budget_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:text="@string/remaining_budget_badge"
            />

        <TextView
            android:id="@+id/title_remaining_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/title_remaining_budget_badge"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:text="@string/remaining_budget_mock"
            />



        <TextView
            android:id="@+id/title_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title_end_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_end_time"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_above="@id/title_end_day"
            android:text="@string/ends_date_badge"
            />


    </RelativeLayout>
    <!-- RIGHT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bgTitleRight"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/title_from_to_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/from_to_purple" />

        <TextView
            android:id="@+id/title_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/title_name_description_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title_project_name"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:src="@color/contentDividerLine" />

        <TextView
            android:id="@+id/title_project_short_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_name_description_divider"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/title_contributors_count"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_contributors_count"
            android:layout_alignStart="@id/title_contributors_count"
            android:text="@string/contributors_count_badge" />


        <TextView
            android:id="@+id/title_pledges_sum"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_pledges_sum"
            android:layout_alignStart="@id/title_pledges_sum"
            android:text="@string/pledges_sum_badge" />

        <TextView
            android:id="@+id/title_goal_value"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/weight_mock" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_goal_value"
            android:layout_alignStart="@id/title_goal_value"
            android:text="@string/goal_value_badge" />

    </RelativeLayout>
</LinearLayout>